# tuner

./: .gitignore  .golangci.yml  .goreleaser.yml  CLAUDE.md  README.md  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
.opencode/skills/pickled-onions-channel/: SKILL.md
cmd/tuner/: main.go
configs/: default.yaml
features/: tuner-broadcasting.feature  tuner-federation.feature  tuner-receiving.feature  tuner-rust-visualization.feature
internal/config/: config.go  config_test.go
internal/lezzdemo/: discover.go
internal/llms/: generator.go  generator_test.go
internal/mdns/: advertiser.go  browser.go  browser_test.go
internal/server/: tuner.go  tuner_test.go
internal/signal/: strength.go  strength_test.go
internal/tv/: channel.go  channel_test.go  presets.go  presets_test.go
viz/: Cargo.toml
viz/src/: main.rs  signal.rs  topology.rs
